--- a/style.css
+++ b/style.css
@@ -25,9 +25,7 @@ header{
         display: flex;
         justify-content: space-between;
         margin-left: 20px;
-        margin-right: 20px;
-    
-
+        margin-right: 20px;   
    
 }
 
@@ -145,6 +143,7 @@ p{
 }
 
 /*  ***     ***     *** Mise en place de la section filtres***      ***     ***   */
+
 .filtres{
     display: flex;
     align-items: center;
@@ -611,11 +610,11 @@ li{
 {
     body{
             width: 100%;
-            height: 100%;
-            margin: 0px;
+            height: 100%;            
             padding: 1px;
             overflow-x: hidden;
-            
+            margin-right: 0;
+            margin-left: 0;            
             
     }
 
@@ -623,88 +622,99 @@ li{
             display: flex;
             flex-wrap: wrap;
             justify-content: flex-start;
+            margin-right: 0;
+            margin-left: 0;
+            
     }
 
-    .logoloca{
-            padding: 12px 15px 12px 15px;
+.logo{
+        width: 30%;
+        margin-left: 8%;
+        padding-top: 20px;
+}
 
-    }
+.logoheader:nth-child(1){
+        width: 20%;
+        order: 1;
+        
+}
 
-    .logo{
-            width: 30%;
-            margin-left: 8%;
-    }
-
-    .logoheader:nth-child(1){
-            width: 20%;
-            order: 1;
-
-    }
-
-    .sinscrire:nth-child(3){
-            width: 20%;
-            text-align: center;
-            text-decoration: none;
-            margin-right: 4%;
-            order: 2;
-    }
+.sinscrire:nth-child(3){
+        width: 20%;
+        text-align: center;
+        text-decoration: none;
+        margin-right: 4%;
+        order: 2;
+        padding-top: 20px;
+        margin-top: 4px;
+}
 
 
 /*      **      **      **Responsive Nav Choix**        **      **      */
 
-    .choix:nth-child(2){
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-            order: 3;
-            line-height: 40px;
-            
-        }
-        
-    .choix:nth-child(2) ul{
-            padding-inline-start: initial;
-            width:100%;
-            
-    }
+.choix:nth-child(2){
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        order: 3;
+        line-height: 40px;
 
-    .choix:nth-child(2) li{
-            margin: auto;
-            width:50%;
-            text-align: center;
-            border-bottom: 2px solid #F2F2F2;
-            
-    }
+        
+}
+
+.choix:nth-child(2) ul{
+        padding-inline-start: initial;
+        width:100%;
+        
+}
+
+.choix:nth-child(2) li{
+        margin: auto;
+        width:50%;
+        text-align: center;
+        border-bottom: 2px solid #F2F2F2;
+        
+}
 
     .choix:nth-child(2) li:hover{
             border: none;
             color: #0065FC;
             border-bottom: 2px solid #0065FC;
             
-    }
-
-    nav a:hover{
-            border-top: none;
         }
         
-/*           **      **      **      **Responsive partie search**    **      **      **      */
+        nav a:hover{
+                border-top: none;
+        }
+        
+        /*           **      **      **      **Responsive partie search**    **      **      **      */
+        
+        .search{
+                margin-right: 0;
+                margin-left: 0;
+        }
 
         H1{
                 font-size: 1.3em;
         }
-    
+        
         p{
                 font-size: 1em;
                 margin-bottom: 25px;
         }
-
-    .searchecrit{
-            margin-left: 6%;
-            width: 80%;            
         
-    }
-    
-    .formsearch{
-            
+        .searchecrit{
+                margin-left: 6%;
+                width: 80%;            
+                
+        }
+        
+        .logoloca{
+                padding: 12px 15px 12px 15px;
+        }
+
+        .formsearch{
+                
             margin-left: 6%;
             width: 100%;
             justify-content: center;
@@ -738,7 +748,7 @@ li{
 
 
 
-        /*  **      **      **      **Responsive pour la partie filtres**      **      **       */
+/*        **      **      **      **Responsive pour la partie filtres**      **      **       */
     
         H4{
                 font-size: 1.2em;                               
@@ -758,8 +768,8 @@ li{
             flex-direction: row;
             flex-wrap: wrap;
             font-size: 1.1em;
-            margin: 0%;          
-                  
+            margin: 0px;
+           
     }
 
     .money, .famille{
@@ -769,15 +779,6 @@ li{
     .infosup{
             margin-left: 6%;
     }
-
-
-
-
-    
-
-  
-
-
     
 /*      **      **      **      **Responsive sur la partie principal**         **      **      */
         
@@ -786,6 +787,9 @@ li{
                 padding: 0px;
                 width: auto;
                 height: 2300px;
+                margin-right: 0;
+                margin-left: 0;
+                
         }
 
         
@@ -795,7 +799,7 @@ li{
                 background-color: #F2F2F2;
                 justify-content: center;
                 border-radius: 0;
-                
+                margin: 0;
         }
         
         .noteetoilepopu, .noteetoilepopu1{       
@@ -833,6 +837,8 @@ li{
                
                 padding: 0px;
                 width: auto;
+                margin-right: 0;
+                margin-left: 0;
                 
         }
         .activites{
@@ -905,6 +911,12 @@ li{
                 flex-direction: column;
                 width: auto;
                 margin-top: 25px;
+                margin-right: 0px;
+                margin-left: 0px;
+        }
+        
+        .apropos, .nosheber, .assist{
+                width: 100%;
         }
 
        
