--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ input{
 .lgtdispo{
         padding-top: 1px;
         margin-top: 15px;
+        line-height: 20px;
 }
 
 /*              **      **      ** Section principale**         **      **       */
@@ -356,7 +357,7 @@ aside{
         border-radius: 20px;
         width: calc(40% - 40px);
         margin-right: 40px;
-        padding-bottom: 0px;
+        padding: 20px;
         
 
 }
@@ -365,7 +366,9 @@ aside{
         display: flex;
         justify-content: space-between;
         align-items: baseline;
-        width: 80%;        
+        width: 80%;    
+        padding-top: 9px;
+        padding-bottom:15px;    
 }
 
 
@@ -428,14 +431,14 @@ aside .etoilebleu .etoilegrise{
 .noteetoilepopu{       
         position: relative;
         left: 16px;
-        top: 60px;
+        top: 45px;
         
 }
 
 .noteetoilepopu1{
         position: relative;
         left: 16px;
-        top: 75px;
+        top: 65px;
 
 }
 
@@ -616,8 +619,7 @@ li{
 {
     body{
             width: 100%;
-            height: 100%;            
-            padding: 1px;
+            height: 100%;   
             overflow-x: hidden;
             margin-right: 0;
             margin-left: 0;            
@@ -722,7 +724,6 @@ li{
         .formsearch{
                 
             margin-left: 6%;
-            width: 100%;
             justify-content: center;
             font-size: 1.1em;
                                 
@@ -731,6 +732,7 @@ li{
 
     input{
             font-size: 1em;
+            width: 180px;
     }
 
 
@@ -835,6 +837,10 @@ li{
             width: 100%;
             font-size: 1.3em;
    
+        }
+
+        .titrepopu {
+                padding:0;
         }
         
 /*      **      **      **      **Responsive pour la partie activités**         **      **      **      */
