--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ li{
     }
 
 .logo{
-        width: 30%;
+        width: 80px;
         margin-left: 8%;
         padding-top: 20px;
 }
@@ -834,13 +834,13 @@ li{
            
         }
 
-    .casehotel{
+        .casehotel{
             width: 100%;
             
             
         }
 
-    .hebergement{
+        .hebergement{
             width: 100%;
             font-size: 1.3em;
    
@@ -881,7 +881,7 @@ li{
 
         .entier{
                 height: 200px;
-                width: 90%;
+                width: 100%;
                 margin-bottom: 30px; 
         }
 
@@ -905,7 +905,7 @@ li{
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
-                width: 90%;
+                width: 100%;
                 height: 400px;
                 align-items: center;
                 margin-bottom: 20px;               
