--- a/style.css
+++ b/style.css
@@ -16,10 +16,14 @@ body{
     width: auto;
     height: auto;
     overflow-x: hidden;
-    margin: auto;
-    
-    
+    margin: auto;      
 }
+
+.contenant{
+        max-width: 1400px;
+        margin: auto;
+}
+
 /*  ***     ***     *** Mise en place de la section Header***      ***     ***  */
 header{
         display: flex;
@@ -49,26 +53,33 @@ header{
 nav ul{
         display: inline-flex;
         list-style-type: none;
+       
         
 }
 
 nav li{
-        margin-right: 40px;
+        width: 150px;
+        text-align: center;
+        
 }
 
 nav a{
-       text-decoration: none;
-       color: black;    
+        text-decoration: none;
+        color: black;
+
+            
 
 }
 
-
-nav a:hover, .sinscrire:hover{
+nav a:hover{
         color: #0065FC;
         border-top: 2px solid #0065FC;
         padding-top: 49px;
- 
+        display: block;
+        margin-top: -50px;
+
 }
+
 
 .sinscrire{
       padding-top: 49px;
